# Chess

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  homebrew.cmake
include/: app.hpp  resources.hpp  utils.hpp  window.hpp
include/game/: coord.hpp  game.hpp  piece.hpp
include/graphics/: game.hpp  image.hpp  text.hpp  window.hpp
resources/sprites/: puller.sh
src/: main.cpp  resources.cpp
src/app/game/: coord.cpp  game.cpp  piece.cpp
src/graphics/: game.cpp  image.cpp  text.cpp  window.cpp
src/graphics/window/: window.cpp
